--- a/SchoolApp/SchoolApp/Logged.xaml
+++ b/SchoolApp/SchoolApp/Logged.xaml
@@ -2,6 +2,7 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SchoolApp.Logged"
+             NavigationPage.HasNavigationBar="False"
              xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
              android:TabbedPage.ToolbarPlacement="Bottom"
              android:TabbedPage.BarItemColor="White"
@@ -45,9 +46,11 @@
         </ContentPage.IconImageSource>
 
         <ScrollView>
+            
 
             <StackLayout x:Name="StackResultUsers">
 
+                <Button Text="Reload" Clicked="ReloadUsers"/>
 
             </StackLayout>
 
